dc/s2n-quic-dc/src/snapshots/stream__writer__tests__write_msg_blocked_with_no_chunk_sent_emits_queue_data_blocked.snap
---
source: dc/s2n-quic-dc/src/testing.rs
assertion_line: 352
expression: logs
---
0:00:00.000000000 [main] TRACE c#tx.flow.window_blocked=1
0:00:00.000000000 [main] TRACE c#tx.flow.data_blocked_sent=1
0:00:00.010000000 [main] DEBUG Writer dropping binding_id=1 status=Open next_offset=0 remote_max_data=0
