dc/s2n-quic-dc/src/snapshots/stream__writer__tests__write_msg_empty_buffer_with_fin_emits_fin_frame.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Writer dropping binding_id=1 status=FinSent next_offset=0 remote_max_data=4611686018427387903
0 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
