dc/s2n-quic-dc/src/snapshots/stream__writer__tests__write_msg_large_payload_uses_multiple_msg_segments.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=339257
0 [main] TRACE m#tx.msg.segment_size=337920
0 [main] TRACE m#tx.msg.chunks_per_segment=128
0 [main] TRACE m#tx.msg.segment_size=337920
0 [main] TRACE m#tx.msg.chunks_per_segment=128
0 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Writer dropping binding_id=1 status=FinSent next_offset=339257 remote_max_data=4611686018427387903
0 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
