dc/s2n-quic-dc/src/snapshots/stream__writer__tests__write_msg_resume_does_not_underflow_credits_when_pool_cap_below_chunk.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG Writer dropping binding_id=1 status=Init next_offset=0 remote_max_data=0
0 [main] DEBUG distributor created
0 [main] TRACE c#credit.distributor.passes=1
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=1320
0 [main] TRACE m#tx.msg.segment_size=5280
0 [main] TRACE m#tx.msg.chunks_per_segment=1
0 [main] DEBUG event=on_init_sent prev=Init next=InitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] TRACE c#credit.distributor.passes=1
0 [main] TRACE c#credit.release.bytes=1320
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG poll_remote_budget received messages binding_id=1 status=InitSent msg_count=1
0 [main] DEBUG event=on_confirmed prev=InitSent next=Open location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Flow established binding_id=1
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=1320
0 [main] TRACE m#tx.msg.segment_size=5280
0 [main] TRACE m#tx.msg.chunks_per_segment=1
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=1320
0 [main] TRACE m#tx.msg.segment_size=5280
0 [main] TRACE m#tx.msg.chunks_per_segment=1
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=1320
0 [main] TRACE m#tx.msg.segment_size=5280
0 [main] TRACE m#tx.msg.chunks_per_segment=1
0 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Writer dropping binding_id=1 status=FinSent next_offset=5280 remote_max_data=1048576
0 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] TRACE c#credit.release.bytes=3960
0 [main] TRACE c#credit.release.calls=1
0 [main] TRACE c#credit.distributor.passes=1
0 [main] TRACE c#credit.distributor.passes=1
0 [main] DEBUG distributor dropping; closing pool
